--- a/demojs.html
+++ b/demojs.html
@@ -8,10 +8,17 @@
 
 </head>
 <body>
-
+<script src="js/script.js" charset="utf-8"></script>
+  <input type="text" id="getText" onkeyup="func2();">
+  <p id="showtext"></p>
+  <hr>
   <div id="result"></div>
-  <h1>This is Header</h1>
-  
+  <input type="text" value="thẻ không cần lấy" class="website"/>
+  <div>
+      <input type="text" value="Thẻ Cần Lấy" class="website"/><br>
+      <input type="text" value="thẻ không cần lấy"/>
+  </div>
+  <button type="button" onclick="func();" name="button">Click me</button>
   <!----------------------------------------------------->
   <script src="js/script.js" charset="utf-8"></script>
 </body>
