--- a/demojs.html
+++ b/demojs.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-  
+  <p id="result"></p>
   <!----------------------------------------------------->
   <script src="js/script.js" charset="utf-8"></script>
 </body>
