--- a/demojs.html
+++ b/demojs.html
@@ -8,8 +8,10 @@
 
 </head>
 <body>
-  <p id="result"></p>
+  <input type="text" id="id-textbox" value=""/> <br/>
+  <input type="button" id="id-button" onclick="showTextVal()" value="Alert"/><br>
   <!----------------------------------------------------->
+  <script src="js/jquery-2.4.4.min.js"></script>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
 </html>
